# makequick

./: .gitignore  .travis.yml  CONTRIBUTING.md  Makefile.am  NEWS  OMakefile  Rules.am  configure.ac  configure.jml
.web/: index.pod  project.pod  rules.pod  target.pod  template.pod  variables.pod
debian/: changelog  control  makequick.install  makequick.install.in  rules
extra/: Rules.am  gitignore  mq.vim  prelude.am
extra/doc/: .gitignore  Doxyfile  Makefile  doxygen.sty  header.tex  pod2latex  refman.tex
extra/m4/: Rules.am  cflags.m4  ebcdic.m4  enum-fwdecl.m4  float.m4  late-expansion.m4  libraries.m4  make.m4  mudflap.m4  options.m4  perl.m4  pkgconfig.m4  status.m4  stdint.m4  strict.m4  summary.m4
extra/mk/: init.am
extra/rules/: Rules.am  c++.mq  c.mq  flex.mq  lex.mq  yacc.mq
extra/template/: configure.mq
extra/web/: makepp.pod
include/: Rules.am  annotation.h  annotation_map.h  colours.h  exception.h  file_lexer.h  foreach.h  lexer.h  node.h  node_ptr.h  nopvisitor.h  parser.h  parseutil.h  phase.h  phases.h  shstr.h  string_lexer.h  timing.h  visitor.h  ylcode.h
include/algorithm/: Rules.am  grep.h
include/annotations/: Rules.am  build_dag.h  error_log.h  file_list.h  inference_engine.h  output_file.h  rule_info.h  symbol_table.h  target_objects.h
include/boost/: Rules.am  archive_fwd.hpp  filesystem_fwd.hpp
include/fs/: Rules.am  fwd.h  fwd.hpp  path.h  path.hpp
include/lexer/: Rules.am  pimpl.h  util.h
include/stdafx/: Rules.am  stdafx.h
include/util/: Rules.am  (+15 more)
src/: Generate.om  OMakefile  OMakefile.ml  Rules.am  Rules.mq  annotation.cc  annotation_map.cc  annotation_map.h  colours.cc  config.h  exception.cc  exception.cpp  exception.h  file_lexer.cc  file_lexer.cpp  file_lexer.h  lexer.cc  lexer.cpp  main.cc  main.cpp  node.cc  node.cpp  node.h  node_factory.cpp  node_ptr.h  nopvisitor.cc  parser.cc  parser.cpp  parseutil.cc  parseutil.cpp  phase.h  phases.cc  phases.cpp  phases.h  serialisation.cc  shstr.cc  sighandler.cc  sighandler.cpp  string_lexer.cc  string_lexer.cpp  (+7 more)
testsuite/: Rules.am
(+242 files in other folders)
